--- a/notebooks/02-exploratory-analysis.ipynb
+++ b/notebooks/02-exploratory-analysis.ipynb
@@ -1,17 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "3ee75efc",
-   "metadata": {},
-   "source": [
-    "https://github.com/anki-xyz/bagls/blob/master/Utils/DataGenerator.py#L109"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773f96cb",
+   "id": "e5d02781",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -20,9 +12,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [conda env:cv-tf-torch]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cv-tf-torch-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -34,7 +26,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
