added check for similarity of filenames in train and test dirs

--- a/notebooks/01-data-prep.ipynb
+++ b/notebooks/01-data-prep.ipynb
@@ -71,6 +71,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "331d446b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# note the similar filenames in the test and train directories\n",
+    "# this is only based on naming and not the actual image\n",
+    "train_meta_list = [i.split(\"/\")[-1].split(\".\")[0] for i in glob(\"../training/training/*.meta\")]\n",
+    "test_meta_list = [i.split(\"/\")[-1].split(\".\")[0] for i in glob(\"../test/test/*.meta\")]\n",
+    "\n",
+    "len(set(train_meta_list).intersection(set(test_meta_list)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "4fd9c678",
    "metadata": {
