--- a/notebooks/01-data-prep.ipynb
+++ b/notebooks/01-data-prep.ipynb
@@ -38,8 +38,8 @@
    "id": "e36256d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:22:24.501413Z",
-     "start_time": "2022-11-22T13:22:24.040410Z"
+     "end_time": "2022-12-03T16:38:45.334369Z",
+     "start_time": "2022-12-03T16:38:43.406190Z"
     }
    },
    "outputs": [],
@@ -54,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "ce708357",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-29T12:07:57.053079Z",
-     "start_time": "2022-11-29T12:07:57.043618Z"
+     "end_time": "2022-12-03T16:38:45.341457Z",
+     "start_time": "2022-12-03T16:38:45.336744Z"
     }
    },
    "outputs": [],
@@ -71,10 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "331d446b",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "id": "779e6653",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-03T16:38:47.358028Z",
+     "start_time": "2022-12-03T16:38:45.343520Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3500"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# note the similar filenames in the test and train directories\n",
     "# this is only based on naming and not the actual image\n",
@@ -86,12 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4fd9c678",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:22:24.516958Z",
-     "start_time": "2022-11-22T13:22:24.504632Z"
+     "end_time": "2022-12-03T16:38:47.372770Z",
+     "start_time": "2022-12-03T16:38:47.362080Z"
     }
    },
    "outputs": [
@@ -112,7 +128,7 @@
        " 'Post-processed': 1}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,12 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a5bf53a9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:22:25.919747Z",
-     "start_time": "2022-11-22T13:22:25.909248Z"
+     "end_time": "2022-12-03T16:38:47.379701Z",
+     "start_time": "2022-12-03T16:38:47.374886Z"
     }
    },
    "outputs": [],
@@ -150,12 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "7f251af5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:25:59.645842Z",
-     "start_time": "2022-11-22T13:22:29.260227Z"
+     "end_time": "2022-12-03T16:45:22.499783Z",
+     "start_time": "2022-12-03T16:38:47.381956Z"
     }
    },
    "outputs": [
@@ -163,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 55750/55750 [03:25<00:00, 271.02it/s]\n"
+      "100%|██████████| 55750/55750 [06:30<00:00, 142.85it/s]\n"
      ]
     }
    ],
@@ -174,12 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c1861198",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:25:59.690927Z",
-     "start_time": "2022-11-22T13:25:59.672913Z"
+     "end_time": "2022-12-03T16:45:22.521093Z",
+     "start_time": "2022-12-03T16:45:22.502420Z"
     }
    },
    "outputs": [
@@ -334,7 +350,7 @@
        "0                                    healthy         0              2     1434  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,12 +361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b28871b3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:25:59.820690Z",
-     "start_time": "2022-11-22T13:25:59.693266Z"
+     "end_time": "2022-12-03T16:45:22.655442Z",
+     "start_time": "2022-12-03T16:45:22.523197Z"
     }
    },
    "outputs": [
@@ -387,12 +403,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5d95170f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:25:59.827343Z",
-     "start_time": "2022-11-22T13:25:59.823846Z"
+     "end_time": "2022-12-03T16:45:22.661411Z",
+     "start_time": "2022-12-03T16:45:22.657899Z"
     }
    },
    "outputs": [],
@@ -402,12 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "37ad4dff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:25:59.846188Z",
-     "start_time": "2022-11-22T13:25:59.829687Z"
+     "end_time": "2022-12-03T16:45:22.677880Z",
+     "start_time": "2022-12-03T16:45:22.665924Z"
     }
    },
    "outputs": [
@@ -447,7 +463,7 @@
        "       'Fibrotic/stiff right vocal fold'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,12 +474,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ca79a349",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:25:59.853044Z",
-     "start_time": "2022-11-22T13:25:59.848436Z"
+     "end_time": "2022-12-03T16:45:22.684412Z",
+     "start_time": "2022-12-03T16:45:22.679947Z"
     }
    },
    "outputs": [],
@@ -471,18 +487,17 @@
     "def _remove_subset(df, col, vals):\n",
     "    \"\"\"Return dataset after filtering out vals from column\"\"\"\n",
     "    mask = (df[col].isin(vals))\n",
-    "    return df.loc[~mask,:]\n",
-    "    "
+    "    return df.loc[~mask,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "10c07e48",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:00.058338Z",
-     "start_time": "2022-11-22T13:25:59.855415Z"
+     "end_time": "2022-12-03T16:45:22.886633Z",
+     "start_time": "2022-12-03T16:45:22.686675Z"
     }
    },
    "outputs": [
@@ -518,6 +533,7 @@
     "    'None (half year after diagnosis of small vocal nodules)',\n",
     "    'functional',\n",
     "    'None (higher phonation)',\n",
+    "    '',\n",
     "]\n",
     "df_train = _remove_subset(df_train, label_col, vals=remove_from_train)\n",
     "df_train = df_train.reset_index(drop=True)\n",
@@ -526,12 +542,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "bc8a244b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:12.938074Z",
-     "start_time": "2022-11-22T13:26:00.060898Z"
+     "end_time": "2022-12-03T16:45:37.198651Z",
+     "start_time": "2022-12-03T16:45:22.889041Z"
     }
    },
    "outputs": [
@@ -539,7 +555,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3500/3500 [00:12<00:00, 276.33it/s]\n"
+      "100%|██████████| 3500/3500 [00:14<00:00, 248.19it/s]\n"
      ]
     },
     {
@@ -577,12 +593,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "3f2f0ef9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:12.947061Z",
-     "start_time": "2022-11-22T13:26:12.941234Z"
+     "end_time": "2022-12-03T16:45:37.207070Z",
+     "start_time": "2022-12-03T16:45:37.200912Z"
     }
    },
    "outputs": [
@@ -606,7 +622,7 @@
        "       'spasmodic dysphonia', 'paresis'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,12 +633,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "faf6dbbc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:12.973057Z",
-     "start_time": "2022-11-22T13:26:12.950783Z"
+     "end_time": "2022-12-03T16:45:37.227394Z",
+     "start_time": "2022-12-03T16:45:37.209305Z"
     }
    },
    "outputs": [
@@ -631,25 +647,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3300 entries, 0 to 3299\n",
+      "RangeIndex: 2300 entries, 0 to 2299\n",
       "Data columns (total 13 columns):\n",
       " #   Column                      Non-Null Count  Dtype \n",
       "---  ------                      --------------  ----- \n",
-      " 0   Video Id                    3300 non-null   object\n",
-      " 1   Camera                      3300 non-null   object\n",
-      " 2   Sampling rate (Hz)          3300 non-null   object\n",
-      " 3   Video resolution (px, HxW)  3300 non-null   object\n",
-      " 4   Color                       3300 non-null   object\n",
+      " 0   Video Id                    2300 non-null   object\n",
+      " 1   Camera                      2300 non-null   object\n",
+      " 2   Sampling rate (Hz)          2300 non-null   object\n",
+      " 3   Video resolution (px, HxW)  2300 non-null   object\n",
+      " 4   Color                       2300 non-null   object\n",
       " 5   Endoscope orientation       2300 non-null   object\n",
-      " 6   Endoscope application       3300 non-null   object\n",
-      " 7   Age range (yrs)             3300 non-null   object\n",
-      " 8   Subject sex                 3300 non-null   object\n",
-      " 9   Subject disorder status     3300 non-null   object\n",
-      " 10  Segmenter                   3300 non-null   object\n",
-      " 11  Post-processed              3300 non-null   object\n",
-      " 12  Image Id                    3300 non-null   object\n",
+      " 6   Endoscope application       2300 non-null   object\n",
+      " 7   Age range (yrs)             2300 non-null   object\n",
+      " 8   Subject sex                 2300 non-null   object\n",
+      " 9   Subject disorder status     2300 non-null   object\n",
+      " 10  Segmenter                   2300 non-null   object\n",
+      " 11  Post-processed              2300 non-null   object\n",
+      " 12  Image Id                    2300 non-null   object\n",
       "dtypes: object(13)\n",
-      "memory usage: 335.3+ KB\n"
+      "memory usage: 233.7+ KB\n"
      ]
     },
     {
@@ -666,7 +682,8 @@
     "remove_from_test = [\n",
     "    'None (half year post-phonomicrosurgery for polipoid mid-membranous lesions)',\n",
     "    'None (one year after presumption of a pseudocyst/sulcus in left vocal fold)',\n",
-    "    'functional'\n",
+    "    'functional',\n",
+    "    '',\n",
     "]\n",
     "df_test = _remove_subset(df_test, label_col, vals=remove_from_test)\n",
     "df_test = df_test.reset_index(drop=True)\n",
@@ -675,12 +692,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d9335929",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:13.013363Z",
-     "start_time": "2022-11-22T13:26:12.975455Z"
+     "end_time": "2022-12-03T16:45:37.243513Z",
+     "start_time": "2022-12-03T16:45:37.229433Z"
     }
    },
    "outputs": [],
@@ -694,12 +711,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "e321638a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:13.020651Z",
-     "start_time": "2022-11-22T13:26:13.015652Z"
+     "end_time": "2022-12-03T16:45:37.250017Z",
+     "start_time": "2022-12-03T16:45:37.245895Z"
     }
    },
    "outputs": [
@@ -708,7 +725,7 @@
      "output_type": "stream",
      "text": [
       "Train samples:  55150\n",
-      "Test samples:  3300\n"
+      "Test samples:  2300\n"
      ]
     }
    ],
@@ -719,12 +736,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "09124410",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:13.026491Z",
-     "start_time": "2022-11-22T13:26:13.023160Z"
+     "end_time": "2022-12-03T16:45:37.255581Z",
+     "start_time": "2022-12-03T16:45:37.252342Z"
     }
    },
    "outputs": [],
@@ -734,12 +751,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "26b71a5d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:13.035562Z",
-     "start_time": "2022-11-22T13:26:13.028878Z"
+     "end_time": "2022-12-03T16:45:37.262707Z",
+     "start_time": "2022-12-03T16:45:37.257920Z"
     }
    },
    "outputs": [],
@@ -762,12 +779,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "8bf0e681",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:26:13.076069Z",
-     "start_time": "2022-11-22T13:26:13.038115Z"
+     "end_time": "2022-12-03T16:45:37.286740Z",
+     "start_time": "2022-12-03T16:45:37.264629Z"
     }
    },
    "outputs": [
@@ -794,12 +811,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "8811d391",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:29:38.720420Z",
-     "start_time": "2022-11-22T13:27:44.329966Z"
+     "end_time": "2022-12-03T16:56:52.324431Z",
+     "start_time": "2022-12-03T16:45:37.288790Z"
     }
    },
    "outputs": [
@@ -807,8 +824,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 33950/33950 [01:01<00:00, 551.39it/s]\n",
-      "100%|██████████| 21200/21200 [00:38<00:00, 546.21it/s]\n"
+      "100%|██████████| 33950/33950 [06:58<00:00, 81.20it/s] \n",
+      "100%|██████████| 21200/21200 [04:04<00:00, 86.70it/s] \n"
      ]
     }
    ],
@@ -821,12 +838,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "6fa3a3d2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:29:38.742256Z",
-     "start_time": "2022-11-22T13:29:38.724770Z"
+     "end_time": "2022-12-03T16:56:52.346305Z",
+     "start_time": "2022-12-03T16:56:52.328358Z"
     }
    },
    "outputs": [
@@ -835,7 +852,7 @@
      "output_type": "stream",
      "text": [
       "Healthy test size:  1450\n",
-      "Unhealthy test size:  1850\n"
+      "Unhealthy test size:  850\n"
      ]
     }
    ],
@@ -853,12 +870,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "068faa32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:32:26.691135Z",
-     "start_time": "2022-11-22T13:32:20.006989Z"
+     "end_time": "2022-12-03T16:56:55.947389Z",
+     "start_time": "2022-12-03T16:56:52.349176Z"
     }
    },
    "outputs": [
@@ -866,8 +883,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1450/1450 [00:02<00:00, 591.04it/s]\n",
-      "100%|██████████| 1850/1850 [00:03<00:00, 612.89it/s]\n"
+      "100%|██████████| 1450/1450 [00:02<00:00, 685.90it/s]\n",
+      "100%|██████████| 850/850 [00:00<00:00, 870.71it/s]\n"
      ]
     }
    ],
@@ -880,12 +897,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "8fb0a0df",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:33:23.836853Z",
-     "start_time": "2022-11-22T13:33:23.431142Z"
+     "end_time": "2022-12-03T16:56:56.422978Z",
+     "start_time": "2022-12-03T16:56:55.950612Z"
     }
    },
    "outputs": [],
@@ -905,12 +922,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "7f7442de",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-29T12:08:23.916540Z",
-     "start_time": "2022-11-29T12:08:23.654180Z"
+     "end_time": "2022-12-03T16:56:56.612784Z",
+     "start_time": "2022-12-03T16:56:56.425728Z"
     }
    },
    "outputs": [],
@@ -938,12 +955,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "6b78239d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:33:47.012561Z",
-     "start_time": "2022-11-22T13:33:46.090872Z"
+     "end_time": "2022-12-03T16:56:57.527049Z",
+     "start_time": "2022-12-03T16:56:56.615697Z"
     }
    },
    "outputs": [
@@ -951,16 +968,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Healthy train size:  335\n",
-      "Unhealthy train size:  217\n"
+      "Healthy train size:  340\n",
+      "Unhealthy train size:  212\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 335/335 [00:00<00:00, 726.38it/s]\n",
-      "100%|██████████| 217/217 [00:00<00:00, 745.13it/s]\n"
+      "100%|██████████| 340/340 [00:00<00:00, 716.80it/s]\n",
+      "100%|██████████| 212/212 [00:00<00:00, 770.30it/s]\n"
      ]
     }
    ],
@@ -985,12 +1002,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "34c1e8be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-22T13:34:04.857041Z",
-     "start_time": "2022-11-22T13:34:04.763089Z"
+     "end_time": "2022-12-03T16:56:58.106993Z",
+     "start_time": "2022-12-03T16:56:57.529489Z"
     }
    },
    "outputs": [
@@ -998,16 +1015,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Healthy test size:  13\n",
-      "Unhealthy test size:  20\n"
+      "Healthy test size:  12\n",
+      "Unhealthy test size:  11\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:00<00:00, 928.88it/s]\n",
-      "100%|██████████| 20/20 [00:00<00:00, 1051.19it/s]\n"
+      "100%|██████████| 12/12 [00:00<00:00, 904.07it/s]\n",
+      "100%|██████████| 11/11 [00:00<00:00, 994.34it/s]\n"
      ]
     }
    ],
