Cleaned appendix notebooks

--- a/notebooks/A1-metadata-exploration.ipynb
+++ b/notebooks/A1-metadata-exploration.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b76e8a4c",
+   "metadata": {},
+   "source": [
+    "# Appendix 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "17323283",
@@ -34,32 +42,7 @@
    "source": [
     "path = \"../metadata/data.json\"\n",
     "with open(path, 'r') as file:\n",
-    "    data = json.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "35932c42",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-11-18T09:03:29.374368Z",
-     "start_time": "2022-11-18T09:03:29.365034Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['@type', 'identifier', 'title', 'relatedPublications', 'repositories', 'assays', 'factors', 'studyCharacteristics', 'ontologySourceReferences', 'comments'])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "    data = json.load(file)\n",
     "data.keys()"
    ]
   },
