--- a/notebooks/A2-tf-to-torch-weights.ipynb
+++ b/notebooks/A2-tf-to-torch-weights.ipynb
@@ -5,9 +5,13 @@
    "id": "4097e223",
    "metadata": {},
    "source": [
-    "# Convert `tensorflow.keras` model weights to `pytorch`\n",
+    "# Appendix 2: Convert `tensorflow.keras` model weights to `pytorch` [code dump]\n",
     "\n",
-    "Since the the provided pretrained weights is from an `.h5` file, I demonstrate the conversion of the `tensorflow.keras` weights to `pytorch` weights."
+    "Since the the provided pretrained weights is from an `.h5` file, I demonstrate the conversion of the `tensorflow.keras` weights to `pytorch` weights for use in a `torch` implementation.\n",
+    "\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "This approach is currently put on hold. Please refer to the main notebooks for the `tensorflow.keras` implementation.\n",
+    "</div>"
    ]
   },
   {
