updated notebooks from latest runs

--- a/notebooks/03-simple-convnet.ipynb
+++ b/notebooks/03-simple-convnet.ipynb
@@ -481,11 +481,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "080fea2f",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-12-03T20:18:43.871Z"
+     "end_time": "2022-12-03T22:37:41.763290Z",
+     "start_time": "2022-12-03T20:19:27.378210Z"
     }
    },
    "outputs": [
@@ -527,7 +528,47 @@
      "text": [
       "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
       "Epoch 2/10\n",
-      " 63/391 [===>..........................] - ETA: 11:05 - loss: 0.5688 - ACC: 0.7109 - ROC: 0.7226 - PR: 0.6179 - TP: 1010.0000 - TN: 4701.0000 - FP: 489.0000 - FN: 1834.0000"
+      "391/391 [==============================] - 822s 2s/step - loss: 0.5345 - ACC: 0.7269 - ROC: 0.7695 - PR: 0.6624 - TP: 7932.0000 - TN: 28425.0000 - FP: 3828.0000 - FN: 9833.0000 - val_loss: 0.4730 - val_ACC: 0.7610 - val_ROC: 0.8369 - val_PR: 0.7555 - val_TP: 432.0000 - val_TN: 1571.0000 - val_FP: 126.0000 - val_FN: 503.0000\n",
+      "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
+      "Epoch 3/10\n",
+      "391/391 [==============================] - 814s 2s/step - loss: 0.4495 - ACC: 0.7767 - ROC: 0.8508 - PR: 0.7655 - TP: 11003.0000 - TN: 27845.0000 - FP: 4408.0000 - FN: 6762.0000 - val_loss: 0.3733 - val_ACC: 0.8222 - val_ROC: 0.9038 - val_PR: 0.8483 - val_TP: 630.0000 - val_TN: 1534.0000 - val_FP: 163.0000 - val_FN: 305.0000\n",
+      "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
+      "Epoch 4/10\n",
+      "391/391 [==============================] - 810s 2s/step - loss: 0.3479 - ACC: 0.8384 - ROC: 0.9161 - PR: 0.8636 - TP: 13133.0000 - TN: 28803.0000 - FP: 3450.0000 - FN: 4632.0000 - val_loss: 0.2809 - val_ACC: 0.8818 - val_ROC: 0.9484 - val_PR: 0.9145 - val_TP: 780.0000 - val_TN: 1541.0000 - val_FP: 156.0000 - val_FN: 155.0000\n",
+      "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
+      "Epoch 5/10\n",
+      "391/391 [==============================] - 806s 2s/step - loss: 0.2422 - ACC: 0.8974 - ROC: 0.9611 - PR: 0.9347 - TP: 14888.0000 - TN: 29996.0000 - FP: 2257.0000 - FN: 2877.0000 - val_loss: 0.1609 - val_ACC: 0.9411 - val_ROC: 0.9828 - val_PR: 0.9724 - val_TP: 851.0000 - val_TN: 1626.0000 - val_FP: 71.0000 - val_FN: 84.0000\n",
+      "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
+      "Epoch 6/10\n",
+      "391/391 [==============================] - 801s 2s/step - loss: 0.1705 - ACC: 0.9317 - ROC: 0.9806 - PR: 0.9670 - TP: 15898.0000 - TN: 30702.0000 - FP: 1551.0000 - FN: 1867.0000 - val_loss: 0.1143 - val_ACC: 0.9578 - val_ROC: 0.9932 - val_PR: 0.9886 - val_TP: 904.0000 - val_TN: 1617.0000 - val_FP: 80.0000 - val_FN: 31.0000\n",
+      "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
+      "Epoch 7/10\n",
+      "391/391 [==============================] - 803s 2s/step - loss: 0.1228 - ACC: 0.9543 - ROC: 0.9896 - PR: 0.9819 - TP: 16541.0000 - TN: 31190.0000 - FP: 1063.0000 - FN: 1224.0000 - val_loss: 0.0923 - val_ACC: 0.9654 - val_ROC: 0.9952 - val_PR: 0.9902 - val_TP: 876.0000 - val_TN: 1665.0000 - val_FP: 32.0000 - val_FN: 59.0000\n",
+      "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
+      "Epoch 8/10\n",
+      "391/391 [==============================] - 811s 2s/step - loss: 0.0972 - ACC: 0.9646 - ROC: 0.9932 - PR: 0.9877 - TP: 16808.0000 - TN: 31437.0000 - FP: 816.0000 - FN: 957.0000 - val_loss: 0.0599 - val_ACC: 0.9780 - val_ROC: 0.9983 - val_PR: 0.9970 - val_TP: 914.0000 - val_TN: 1660.0000 - val_FP: 37.0000 - val_FN: 21.0000\n",
+      "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
+      "Epoch 9/10\n",
+      "391/391 [==============================] - 799s 2s/step - loss: 0.0783 - ACC: 0.9711 - ROC: 0.9953 - PR: 0.9923 - TP: 17005.0000 - TN: 31565.0000 - FP: 688.0000 - FN: 760.0000 - val_loss: 0.0521 - val_ACC: 0.9818 - val_ROC: 0.9984 - val_PR: 0.9973 - val_TP: 923.0000 - val_TN: 1661.0000 - val_FP: 36.0000 - val_FN: 12.0000\n",
+      "INFO:tensorflow:Assets written to: /home/mdorosan/2022/bagls-sh-project/notebooks/wandb/run-20221203_201914-2r03a2cj/files/model-best/assets\n",
+      "Epoch 10/10\n",
+      "381/391 [============================>.] - ETA: 19s - loss: 0.0610 - ACC: 0.9778 - ROC: 0.9972 - PR: 0.9949 - TP: 16739.0000 - TN: 30917.0000 - FP: 510.0000 - FN: 572.0000"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
      ]
     }
    ],
